--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,4 +5,8 @@
 @import 'variables';
 
 // Bootstrap
-@import 'bootstrap/scss/bootstrap';
+// @import 'bootstrap/scss/bootstrap';
+
+
+// AdminLte
+@import 'admin-lte/dist/css/adminlte.css';
