Font Awesome Installed

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,3 +10,10 @@
 
 // AdminLte
 @import 'admin-lte/dist/css/adminlte.css';
+
+// @import "font-awesome/scsss/font-awesome.scss";
+// @import "font-awesome/css/font-awesome.css";
+// @import "font-awesome/scss/_variables.scss";
+// @import "font-awesome/scss/solid.scss";
+// @import "font-awesome/scss/regular.scss";
+// @import "font-awesome/scss/brands.scss";
